// Lab System - Database Schema

// =====================
// USER APP TABLES
// =====================

Table users {
  id uuid [pk]
  name varchar [not null]
  phone varchar [unique, not null]
  password_hash varchar [not null]
  address text
  latitude float
  longitude float
  total_points int [default: 0]
  total_spent_mmk decimal [not null, default: 0, note: 'Lifetime verified-payment spend; drives membership tier resolution']
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// =====================
// LAB STAFF TABLES
// =====================

Table lab_staff {
  id uuid [pk]
  name varchar [not null]
  email varchar [unique, not null]
  password_hash varchar [not null]
  role staff_role [not null, note: 'admin | lab_technician | reception | manager']
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Enum staff_role {
  admin
  lab_technician
  reception
  manager
  collector
}

// =====================
// LAB TEST CATALOG
// =====================

Table lab_test_catalog {
  id uuid [pk]
  test_name varchar [not null]
  test_code varchar [unique, not null]
  description text
  base_price_mmk decimal [not null]
  category varchar
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
}

// =====================
// ORDERS & SCHEDULING
// =====================

Table lab_orders {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  collector_id uuid [ref: > lab_staff.id]
  description text
  priority order_priority [not null, note: 'urgent | elective']
  patient_name varchar [not null]
  patient_age int [not null]
  patient_phone varchar [not null]
  address text [not null]
  latitude float
  longitude float
  status order_status [not null, default: 'pending']
  original_price_mmk decimal [not null]
  discount_percent decimal [default: 0]
  final_price_mmk decimal [not null]
  material_fee_mmk decimal [default: 0]
  service_geofence_id uuid [ref: > service_geofences.id]
  service_fee_mmk decimal [default: 0]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table lab_order_items {
  id uuid [pk]
  order_id uuid [not null, ref: > lab_orders.id]
  test_id uuid [not null, ref: > lab_test_catalog.id]
  quantity int [not null, default: 1]
  unit_price_mmk decimal [not null]
  subtotal_mmk decimal [not null]
  created_at timestamp [default: `now()`]

  indexes {
    (order_id, test_id) [unique]
  }
}

Enum order_priority {
  urgent
  elective
}

Enum order_status {
  pending
  scheduled
  collecting
  running
  completed
  delivered
}

Table order_schedules {
  id uuid [pk]
  order_id uuid [unique, not null, ref: - lab_orders.id]
  collecting_person varchar
  collection_time timestamp
  running_time timestamp
  report_out_time timestamp
  accepted_by_user boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table order_status_logs {
  id uuid [pk]
  order_id uuid [not null, ref: > lab_orders.id]
  changed_by uuid [not null, ref: > lab_staff.id]
  old_status order_status
  new_status order_status [not null]
  note text
  created_at timestamp [default: `now()`]
}

// =====================
// PAYMENTS
// =====================

Table payments {
  id uuid [pk]
  order_id uuid [not null, ref: > lab_orders.id]
  amount_mmk decimal [not null]
  status payment_status [not null, default: 'pending']
  method payment_method
  reference_no varchar
  verified_by uuid [ref: > lab_staff.id]
  points_redeemed int [not null, default: 0, note: 'Loyalty points redeemed toward this payment']
  points_value_mmk decimal [not null, default: 0, note: 'MMK value of points_redeemed at time of payment']
  paid_at timestamp
  verified_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Enum payment_status {
  pending
  received
  verified
  failed
}

Enum payment_method {
  cash
  bank_transfer
  mobile_pay
}

// =====================
// LAB RESULTS
// =====================

Table lab_results {
  id uuid [pk]
  order_id uuid [unique, not null, ref: - lab_orders.id]
  result_summary text
  pdf_url varchar
  uploaded_by uuid [ref: > lab_staff.id]
  quality_checked boolean [default: false]
  sent_to_user_at timestamp
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// =====================
// AI INTEGRATIONS
// =====================

Table ai_quality_checks {
  id uuid [pk]
  result_id uuid [unique, not null, ref: - lab_results.id]
  verdict ai_verdict [not null]
  analysis_detail text
  raw_ai_response json
  checked_at timestamp [default: `now()`]
}

Enum ai_verdict {
  pass
  warning
  fail
}

Table ai_result_analyses {
  id uuid [pk]
  order_id uuid [not null, ref: > lab_orders.id]
  requested_by uuid [not null, ref: > users.id]
  analysis_summary text
  raw_ai_response json
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// =====================
// QR CODES
// =====================

Table qr_codes {
  id uuid [pk]
  order_id uuid [unique, not null, ref: - lab_orders.id]
  qr_data varchar [not null]
  qr_image_url varchar
  generated_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// =====================
// RATINGS & REVIEWS
// =====================

Table ratings {
  id uuid [pk]
  order_id uuid [not null, ref: > lab_orders.id]
  user_id uuid [not null, ref: > users.id]
  score int [not null, note: '1 to 5']
  remark text
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

// =====================
// POINTS & DISCOUNTS
// =====================

Table point_settings {
  id uuid [pk]
  name varchar [not null]
  spend_amount_mmk decimal [not null, note: 'e.g. 100000']
  points_reward int [not null, note: 'e.g. 10']
  start_date timestamp
  end_date timestamp
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table membership_tiers {
  id uuid [pk]
  name varchar [not null, note: 'e.g. Normal, Silver, Gold']
  min_spend_mmk decimal [not null, default: 0, note: 'Lifetime verified-payment spend required to qualify']
  discount_percent decimal [not null, default: 0, note: 'Added on top of a test''s own discount']
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table point_redemption_settings {
  id uuid [pk]
  mmk_per_point decimal [not null, default: 0, note: 'Global rate: 1 point = mmk_per_point MMK']
  updated_user uuid
  updated_at timestamp [default: `now()`]
}

Table material_fees {
  id uuid [pk]
  name varchar [not null]
  amount_mmk decimal [not null, note: 'e.g. 1000']
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table service_geofences {
  id uuid [pk]
  name varchar [not null]
  west_longitude float [not null]
  east_longitude float [not null]
  north_latitude float [not null]
  south_latitude float [not null]
  service_fee_mmk decimal [not null, default: 0]
  priority int [not null, default: 1]
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table user_points {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  order_id uuid [ref: > lab_orders.id]
  rule_id uuid [ref: > point_settings.id]
  points_earned int [not null]
  description text
  created_at timestamp [default: `now()`]
}

Table test_referral_fees {
  id uuid [pk]
  test_id uuid [not null, ref: > lab_test_catalog.id]
  referral_percent decimal [not null]
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (test_id) [unique]
  }
}

Table test_specific_discounts {
  id uuid [pk]
  test_id uuid [not null, ref: > lab_test_catalog.id]
  discount_percent decimal [not null]
  is_active boolean [default: true]
  start_date timestamp
  end_date timestamp
  created_user uuid
  updated_user uuid
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (test_id) [unique]
  }
}

// =====================
// COLLECTION ROUTES (AI)
// =====================

Table collection_routes {
  id uuid [pk]
  planned_by uuid [not null, ref: > lab_staff.id]
  route_date date [not null]
  ai_optimized_route json
  raw_ai_response json
  status route_status [not null, default: 'draft']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Enum route_status {
  draft
  active
  completed
}

Table route_stops {
  id uuid [pk]
  route_id uuid [not null, ref: > collection_routes.id]
  order_id uuid [not null, ref: > lab_orders.id]
  stop_order int [not null]
  latitude float [not null]
  longitude float [not null]
  address text
  status stop_status [not null, default: 'pending']
  collected_at timestamp

  indexes {
    (route_id, stop_order) [unique]
    (route_id, order_id) [unique]
  }
}

Enum stop_status {
  pending
  collected
  skipped
}

// =====================
// NOTIFICATIONS
// =====================

Table notifications {
  id uuid [pk]
  recipient_type notification_recipient_type [not null, note: 'user | staff']
  user_id uuid [ref: > users.id]
  staff_id uuid [ref: > lab_staff.id]
  order_id uuid [ref: > lab_orders.id]
  title varchar [not null]
  body text
  is_read boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Table advertisements {
  id uuid [pk]
  title varchar [not null]
  description text
  image_url varchar
  start_date timestamp
  end_date timestamp
  is_active boolean [default: true]
  is_deleted boolean [default: false]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
}

Enum notification_recipient_type {
  user
  staff
}

// =====================
// THEMING & BRANDING
// =====================

Table theme_settings {
  id uuid [pk]
  lab_name varchar [not null, default: 'MedLab Smart']
  mode theme_mode [not null, default: 'light']
  primary_color varchar
  secondary_color varchar
  logo_url varchar
  custom_colors json
  latitude float
  longitude float
  address text
  contact_phone varchar
  contact_email varchar
  updated_at timestamp [default: `now()`]
}

Enum theme_mode {
  light
  dark
  custom
  idhc
}
